[project]
name = "roto-debug"
version = "0.1.0"
description = "MCP server for RotoTV debugging and CLI operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "mcp>=1.13.1",
    "httpx>=0.28.1",
    "boto3>=1.35.93",
    "fastmcp>=2.14.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Run with: `uv run roto-debug`
roto-debug = "mcp_server.server:main"
